[upd] api load children
